# hearth

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Makefile  PLAN.md  README.md  REFACTOR_PROPOSAL.md  devenv.nix  devenv.yaml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/hearth-agent-proto/: Cargo.toml
crates/hearth-agent-proto/src/: b64.rs  events.rs  fdpass.rs  hmac.rs  hybrid.rs  lib.rs  task.rs  taskref.rs
crates/hearth-agentd/: Cargo.toml
crates/hearth-agentd/src/: config.rs  control.rs  core.rs  hearthd.rs  http.rs  ledger.rs  lib.rs  main.rs  mcp.rs  refs.rs  relay.rs  wakeups.rs
crates/hearth-e2e/: Cargo.toml
crates/hearth-e2e/src/: lib.rs
crates/hearth-e2e/tests/: phase0_transport_auth.rs  phase1_readiness.rs  phase2_tasks.rs  phase3_agui_http.rs  phase4_delegation.rs  phase5_claude.rs  phase6_hermes.rs
crates/hearth-guestd/: Cargo.toml  build.rs
crates/hearth-guestd/src/: adapter.rs  engine.rs  lib.rs  main.rs  report.rs  server.rs  shim.rs  store.rs  transport.rs  vsock_io.rs
crates/hearth-guestd/src/adapter/: claude.rs  codex.rs  hermes.rs
crates/hearth-proto/: Cargo.toml  build.rs
crates/hearth-proto/src/: lib.rs
crates/hearth-runner/: Cargo.toml
crates/hearth-runner/src/: main.rs
crates/hearthctl/: Cargo.toml
crates/hearthctl/src/: agent.rs  client.rs  docker_run.rs  image_build.rs  image_lint.rs  main.rs  oci.rs  spawn.rs  upgrade.rs  wait.rs
crates/hearthd/: Cargo.toml
crates/hearthd/src/: cloud_init.rs  config.rs  error.rs  guests.rs  host.rs  image.rs  lib.rs  main.rs  net.rs  notify.rs  policy.rs  provision.rs  registry.rs  ssh.rs  testing.rs  vsock.rs
docs/: agent-plane-verification.md  agent-plane.md  distribution-plan.md  dockerfile-images.md  dockerfile-vm-plan.md  operations.md
example/: Dockerfile
example/agent-vm/: Dockerfile  hearth-agent-probe  hearth-agent-probe.service  init
example/hermes-vm/: .gitignore  Dockerfile  README.md  authorized_keys.example  hearth-guestd-hermes.conf  hermes-probe  hermes-probe.service  hermes.env.example  hermes.service  netdiag  netdiag.service
example/http-server/: Dockerfile  serve-http.sh
example/http-server/public/: index.html
example/vm-base/: Dockerfile  README.md  hearth-guestd.service  hearth-usersession-check  hearth-usersession.service  init  ssh-hostkeys.service
guest/: kernel-version.env  kernel.config
nix/: cloud-hypervisor.nix  guest-kernel.nix  module.nix  package.nix
nix/tests/: module.nix
packaging/: nfpm.yaml
packaging/scripts/: postinstall.sh  postremove.sh
packaging/systemd/: hearth-agentd.service  hearth.service
packaging/sysusers.d/: hearth.conf
packaging/tmpfiles.d/: hearth.conf
scripts/: archive-release.sh  build-guest-kernel.sh  build-initramfs.sh  build-package.sh  bump-version.sh  check-release-tag.sh  checkout-release-candidate.sh  dev-restart.sh  lib.sh  stage-release.sh  test-agent-vm.sh  test-dev-restart.sh  test-hermes-vm.sh  test-reproducible-archive.sh  test-spawn-multi.sh  verify-release.sh  verify-systemd-units.sh  workspace-version.sh
systemd/: hearth-agentd-verb-policy.toml  hearth-agentd.service  hearth-proxy.service  hearth-proxy.socket  hearth.service
web/: README.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/scripts/: verify-http-agent.mjs
web/src/: App.tsx  main.tsx
web/src/components/: agent-workspace.tsx  connection-panel.tsx  fleet-sidebar.tsx  typing-session-name.tsx
web/src/components/ai-elements/: prompt-input.tsx
web/src/lib/: hearth-api.ts  transcript.ts
