[workspace]
members = [
  "crates/hearth-proto",
  "crates/hearthd",
  "crates/hearthctl",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://example.invalid/hearth"

[workspace.dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
camino = { version = "1.1.7", features = ["serde1"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.16", features = ["derive", "env"] }
comfy-table = "7.1.1"
futures-util = "0.3.30"
hex = "0.4.3"
libc = "0.2.186"
rand = "0.8.5"
regex = "1.10.6"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sha2 = "0.10.8"
tempfile = "3.12.0"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "time"] }
tokio-stream = "0.1.15"
toml = "0.8.19"
tracing = "0.1.40"
tracing-journald = "0.3.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
ulid = "1.1.3"
walkdir = "2.5.0"
