[package]
name = "hearth-guestd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
hearth-agent-proto = { path = "../hearth-agent-proto" }
hearth-proto = { path = "../hearth-proto" }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-std"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
