[package]
name = "hearthctl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
comfy-table.workspace = true
hearth-proto = { path = "../hearth-proto" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
ulid.workspace = true
