[package]
name = "hearthctl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
comfy-table.workspace = true
hearth-agent-proto = { path = "../hearth-agent-proto" }
hearth-proto = { path = "../hearth-proto" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
toml.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile.workspace = true
